Fix alignment of cards with attachments.

--- a/scss/partials/_activity_card.scss
+++ b/scss/partials/_activity_card.scss
@@ -303,7 +303,7 @@ div.activity-card {
 
   div.activity-card-attachments {
     margin-top: 16px;
-    height: 20px;
+    height: 26px;
 
     div.activity-attachments {
       width: 100%;
